# todo

todo-back/: .env  Cargo.toml  DockerFile  Dockerfile  Makefile  docker-compose.yml
todo-back/migrations/: 20260226233420_todo.sql  20260226233431_label.sql  20260226233440_user.sql  20260227234513_todo.sql  20260301201252_user.sql  20260301233928_todo.sql  20260301233937_label.sql  20260302214129_team.sql  20260303082747_todo.sql  20260303082923_label.sql  20260320100000_workspace.sql
todo-back/src/: auth.rs  handlers.rs  main.rs  models.rs  repositories.rs
todo-back/src/handlers/: label.rs  team.rs  todo.rs  user.rs  workspace.rs
todo-back/src/models/: label.rs  team.rs  todo.rs  user.rs  workspace.rs
todo-back/src/repositories/: label.rs  team.rs  todo.rs  user.rs  workspace.rs
todo-back/src/services/: groq.rs
todo-front/: Dockerfile  cloudbuild.yaml  index.html  package-lock.json  package.json
todo-front/src/: App.tsx  index.css  main.tsx
todo-front/src/components/: RecommendButton.tsx  SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/: toggleLabels.ts
todo-front/src/lib/api/: label.ts  team.ts  todo.ts  user.ts  workspace.ts
todo-front/src/pages/: HomePage.tsx  LandingPage.tsx  LoadingPage.tsx  SetupPage.tsx  SigninPage.tsx  SignupPage.tsx
todo-front/src/router/: AuthContext.tsx  PrivateRoute.tsx  Router.tsx
todo-front/src/styles/: modal.ts
todo-front/src/types/: label.ts  team.ts  todo.ts  user.ts  workspace.ts
