[package]
name = "todo-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"]}
tower = { version = "0.4.11", features = ["util"] }
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"]}
anyhow = "1.0.56"
thiserror = "1.0.30"
http-body = "0.4.3"
validator = { version = "0.14.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenvy = "0.15"
tower-http = {version = "0.6", features = ["cors"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[features]
default = ["database-test"]
database-test = []